<resources>
    <string name="app_name">Bicocca Events HUB</string>
    <string name="home" translatable="false">HOME</string>
    <string name="map">MAP</string>
    <string name="myevents">MY EVENTS</string>
    <string name="myevents_min">My events</string>
    <string name="search">SEARCH</string>
    <string name="account" translatable="false">ACCOUNT</string>
    <string name="myevents_and_places">MY SELECTION</string>
    <string name="content_description_fav_addition">Add the event to the favorite list</string>
    <string name="error_retrieving_events">Error in retrieving the events</string>
    <string name="api_key_error">API Key not valid or maximum number of requests reached</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="cancel_text">Cancel</string>
    <string-array name="sorting_parameters">
        <item>Earliest date</item>
        <item>Latest date</item>
        <item>Rank</item>
        <item>Alphabet (A-Z)</item>
        <item>Alphabet (Z-A)</item>
    </string-array>
    <string-array name="languages">
        <item>IT</item>
        <item>EN</item>
    </string-array>
    <string-array name="sorting_parameters_places">
        <item>Alphabet (A-Z)</item>
        <item>Alphabet (Z-A)</item>
    </string-array>
    <string-array name="categories">
        <item>Music</item>
        <item>Concerts</item>
        <item>Art and Culture</item>
        <item>Sports</item>
        <item>Food and Drinks</item>
        <item>Politics</item>
        <item>Conferences</item>
        <item>Shows and Entertainment</item>
        <item>Charity and Volunteering</item>
        <item>Community</item>
        <item>Fashion and Design</item>
        <item>Technology and Innovation</item>
        <item>Education and Training</item>
        <item>Parties and Nightlife</item>
        <item>Travel and Adventures</item>
        <item>Health and Wellness</item>
        <item>Games and Competitions</item>
        <item>Networking and Professional Meetings</item>
        <item>Other</item>
    </string-array>
    <string name="logo" translatable="false">Logo Application</string>
    <string name="login" translatable="false">Login</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="txt_or" translatable="false">OR</string>
    <string name="google_login">Login with Google</string>
    <string name="new_account">New to Bicocca Events HUB?</string>
    <string name="register">Register</string>
    <string name="error_email">Insert a valid email address</string>
    <string name="error_password">Password should be at least 6 characters</string>
    <string name="check_login_data_message">Check the data you inserted</string>
    <string name="error_login_user_message">There is no user record corresponding to this identifier</string>
    <string name="error_login_password_message">The password is invalid</string>
    <string name="error_user_collision_message">The email address is already in use by another account</string>
    <string name="error_no_google_account_found_message">No Google accounts have been found</string>
    <string name="delete">Delete</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="events_list_item_title" translatable="false">Title event</string>
    <string name="events_list_item_date" translatable="false">12-05-2023 12:28 PM</string>
    <string name="content_description_fav_delete">Remove the event from the favorite list</string>
    <string name="explore_bicocca_events">Explore Bicocca events!</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="see_all_events"><![CDATA[See all events >]]></string>
    <string name="the_most_awaited">The most awaited</string>
    <string name="chosen_for_you">Chosen for you</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="places">Places</string>
    <string name="see_all_venues"><![CDATA[See all places >]]></string>
    <string name="attendance">Attendance:</string>
    <string name="favorite_events_account">Favorite events</string>
    <string name="settings">Settings</string>
    <string name="change_username">Change username</string>
    <string name="change_password">Change password</string>
    <string name="change_language">Change language</string>
    <string name="info" translatable="false">Info</string>
    <string name="version">Version</string>
    <string name="number_of_events">Number of events: </string>
    <string name="back">BACK</string>
    <string name="forward">FORWARD</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="all_events">All events</string>
    <string name="all_places">All places</string>
    <string name="calendar">Calendar</string>
    <string name="select_categories">Select category</string>
    <string name="select_a_date_range">Select a date range</string>
    <string name="from">FROM:</string>
    <string name="to">TO:</string>
    <string name="apply">Apply</string>
    <string name="dismiss">Dismiss</string>
    <string name="delete_filters">Delete filters</string>
    <string name="description">Description</string>
    <string name="for_more_information">For more information:</string>
    <string name="number_of_places">Number of places:</string>
    <string name="send_email">Send Email</string>
    <string name="savings">SAVINGS</string>
    <string name="events">Events</string>
    <string name="events_min">events</string>
    <string name="present_events">Present events:</string>
    <string name="similar_events">Similar events</string>
    <string name="distance">Distance</string>
    <string name="hintsearch">Search events, places…</string>
    <string name="movie_times">Movie times</string>
    <string name="date">Date</string>
    <string name="eventsinthisdate">Events of: </string>
    <string name="noeventsinthisdate">There are no events on this date: </string>
    <string name="favorite_category">Favorite category</string>
    <string name="my_places">My places</string>
    <string name="favorite_places">Favorite places</string>
    <string name="create_place">Create place</string>
    <string name="create_event">Create event</string>
    <string name="title">Title</string>
    <string name="duration">Duration:</string>
    <string name="select_duration">Select duration</string>
    <string name="start">Start:</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="end">End:</string>
    <string name="place">Place</string>
    <string name="place_duepunti">Place:</string>
    <string name="isprivate">Private</string>
    <string name="add">Add</string>
    <string name="all_day">All day</string>
    <string name="unknown">Unknown</string>
    <string name="noevents">There are no events</string>
    <string name="places_list_item_name" translatable="false">Place Name</string>
    <string name="places_list_item_address" translatable="false">Place Address</string>
    <string name="content_description_favpl_delete" translatable="false">Remove the place from the fav list</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="select_point_on_the_map">Select point on the map</string>
    <string name="cap">Cap</string>
    <string name="nation">Nation</string>
    <string name="field_mandatory">The field is mandatory</string>
    <string name="place_added">Place successfully added</string>
    <string name="event_added">Event successfully added</string>
    <string name="event_modified">Event edited successfully</string>
    <string name="place_modified">Place edited successfully</string>
    <string name="number_not_found">Number not found</string>
    <string name="none">None</string>
    <string name="save_events_to_see_recommended_ones">Save events to see recommended ones</string>
    <string name="created_by_users">Created by users</string>
    <string name="order_by">ORDER BY</string>
    <string name="you_have_no_created_events">You have not created any events</string>
    <string name="start_creating_custom_events_to_share_with_other_people">Start creating custom events to share with other people!</string>
    <string name="there_are_no_events_you_like_yet">There are no events you like yet</string>
    <string name="like_an_event">"Like" an event and find it later and help us select the events that are right for you</string>
    <string name="you_have_no_created_places">You have not created any places</string>
    <string name="start_creating_custom_places_to_share_with_other_people">Start creating custom places to share with other people!</string>
    <string name="there_are_no_places_you_like_yet">There are no places you like yet</string>
    <string name="like_a_place">"Like" a place and find it later</string>
    <string name="select_place_source">Select Place Source:</string>
    <string name="google_places">Google Places</string>
    <string name="mailexample_gmail_com">mailexample@gmail.com</string>
    <string name="category">Category</string>
    <string name="edit">Edit</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_optional">Phone number (optional)</string>
    <string name="check_out_this_place">Check out this place:\n</string>
    <string name="location_share">\"Location: \"</string>
    <string name="address_share">\"Address: \"</string>
    <string name="check_out_this_event">Check out this event:\n</string>
    <string name="title_share">\"Title: \"</string>
    <string name="description_share">\"Description: \"</string>
    <string name="date_share">\"Date: \"</string>
    <string name="share_event">Share Event</string>
    <string name="share_place">Share Place</string>
    <string name="delete_place">Delete place</string>
    <string name="delete_event">Delete event</string>
    <string name="event_deleted">Event successfully deleted</string>
    <string name="place_deleted">Place successfully deleted</string>
    <string name="favorite_places_account">Favorite places</string>
    <string name="created_events_account">Created events</string>
    <string name="created_places_account">Created places</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="old_password_text">Old password</string>
    <string name="new_password_text">New Password</string>
    <string name="confirm_new_password_text">Confirm New Password</string>
    <string name="change_password_text">Change Password</string>
    <string name="tap_to_see_place_s_details">Tap to see place\'s details</string>
    <string name="drive">Drive</string>
    <string name="open_in_google_maps">Open in \nGoogle Maps</string>
    <string name="call">Call</string>
    <string name="add_to_favourite">Add to \nfavourite</string>
    <string name="number">Number</string>
    <string name="event_title">Event title</string>
    <string name="event_date">Event date</string>
    <string name="source">source</string>
    <string name="other_dates_of_the_event">Other dates of the event</string>
    <string name="walk">Walk</string>
    <string name="reset_password_text">Enter the email of the account whose password you are trying to reset. An email will be sent to you to reset your password.</string>
    <string name="reset_password_title">Reset password</string>
    <string name="bentornato">"Welcome back, "</string>
</resources>