<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/mapsFragment"
        android:icon="@drawable/ic_maps"
        android:title="@string/map" />
    <item
        android:id="@+id/mySavingsFragment"
        android:icon="@drawable/ic_my_events"
        android:title="@string/savings" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/account" />
</menu>