<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ui.main.CalendarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="20sp">
        <com.google.android.material.button.MaterialButton
            android:layout_width="135sp"
            android:layout_height="60sp"
            android:id="@+id/buttonBackward"
            android:text="@string/back"
            android:textColor="@color/white"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="previousMonthAction"
            android:textSize="16sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/monthYearTV"
            android:layout_width="0sp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="Feb 2021"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="120sp"
            android:layout_height="60sp"
            android:id="@+id/buttonForward"
            android:text="@string/forward"
            android:textColor="@color/white"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="nextMonthAction"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textColor="@color/colorTextSecondary"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textColor="@color/colorTextSecondary"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textColor="@color/colorTextSecondary"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textColor="@color/colorTextSecondary"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thur"
            android:textColor="@color/colorTextSecondary"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textColor="@color/colorTextSecondary"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textColor="@color/colorTextSecondary"
            android:textAlignment="center"
            android:textSize="16sp"/>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>












