<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.AddEventFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16sp">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/event_image"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_baseline_image_24" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:outlineAmbientShadowColor="@color/colorTextSecondary"
                app:boxBackgroundColor="@color/colorBackground"
                app:errorEnabled="true"
                tools:targetApi="p">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:outlineAmbientShadowColor="@color/colorTextSecondary"
                app:boxBackgroundColor="@color/colorBackground"
                app:errorEnabled="true"
                tools:targetApi="p">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorTextPrimary" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/categoriesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="60sp"
                    android:layout_weight="1"
                    android:padding="10sp"
                    android:text="@string/select_categories"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/categoriesSpinner"
                    android:layout_width="150sp"
                    android:layout_height="60sp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:background="@color/colorTextPrimary"
                android:layout_height="1sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/editTextStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/select_date"
                    android:inputType="none"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="18sp"
                    tools:ignore="TextFields" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/editTextStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/select_time"
                    android:inputType="datetime"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/endTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/editTextEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/select_date"
                    android:inputType="date"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="18sp"
                    tools:ignore="TextFields" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/editTextEndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/select_time"
                    android:inputType="datetime"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="18sp" />

            </LinearLayout>


            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/allDay_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_day"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/place"
                android:outlineAmbientShadowColor="@color/colorTextSecondary"
                app:boxBackgroundColor="@color/colorBackground"
                app:errorEnabled="true"
                tools:targetApi="p">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/editTextPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxPrivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isprivate"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:text="@string/delete" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>